--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jmap-jam",
   "version": "0.1.0",
   "type": "module",
+  "main": "dist/index.cjs",
   "types": "dist/index.d.ts",
   "exports": {
     "import": "./dist/index.js",
