--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "require": "./dist/index.cjs",
     "types": "./dist/index.d.ts"
   },
+  "sideEffects": false,
   "files": [
     "dist",
     "src",
