--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jmap-jam",
   "version": "0.1.2",
   "type": "module",
-  "main": "dist/index.cjs",
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "exports": {
     "import": "./dist/index.js",
