--- a/package.json
+++ b/package.json
@@ -2,13 +2,8 @@
   "name": "jmap-jam",
   "version": "0.1.3",
   "type": "module",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "exports": {
-    "import": "./dist/index.js",
-    "require": "./dist/index.cjs",
-    "types": "./dist/index.d.ts"
-  },
+  "types": "./dist/index.d.ts",
+  "exports": "./dist/index.js",
   "sideEffects": false,
   "files": [
     "dist",
@@ -18,6 +13,7 @@
     "README.md"
   ],
   "license": "MIT",
+  "description": "A JMAP client library for Node.js and the browser.",
   "repository": {
     "type": "git",
     "url": "https://github.com/htunnicliff/jmap-jam"
