--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jmap-jam",
-  "version": "0.2.0",
+  "version": "0.3.0-alpha.0",
   "type": "module",
   "types": "./dist/index.d.ts",
   "exports": "./dist/index.js",
