--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jmap-jam",
   "version": "0.3.2",
   "type": "module",
+  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": "./dist/index.js",
   "sideEffects": false,
