Remove non-ESM module resolution and add file extensions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
     "lib": ["ESNext", "DOM"],
-    "module": "esnext",
+    "module": "Node16",
     "target": "ES2018",
-    "moduleResolution": "node",
+    "allowImportingTsExtensions": true,
+    "moduleResolution": "Node16",
     "strict": true,
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
