--- a/biome.jsonc
+++ b/biome.jsonc
@@ -22,6 +22,13 @@
       "recommended": true,
       "style": {
         "noNonNullAssertion": "off"
+      },
+      // Remove these once remedied:
+      "suspicious": {
+        "noExplicitAny": "warn"
+      },
+      "complexity": {
+        "noBannedTypes": "warn"
       }
     }
   },
