--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -46,5 +46,5 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Test
+      - name: Build
         run: npm run build
