Replace Biome with Prettier and ESLint

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,6 +21,9 @@ jobs:
       - name: Lint
         run: npm run lint
 
+      - name: Lint
+        run: npm run format:check
+
   test:
     name: Test
     runs-on: ubuntu-latest
