--- a/package.json
+++ b/package.json
@@ -28,18 +28,26 @@
     "build": "tsup",
     "dev": "vitest dev",
     "test": "vitest run",
-    "lint": "biome ci",
-    "lint:fix": "biome check --write ."
+    "lint": "eslint .",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "dependencies": {
     "type-fest": "4"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
+    "@eslint/js": "^9.25.0",
     "@types/node": "22.7.5",
+    "eslint": "^9.25.0",
+    "eslint-config-prettier": "^10.1.2",
+    "prettier": "^3.5.3",
     "tsup": "8.3.0",
-    "typescript": "5.6.3",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.30.1",
     "vitest": "3.0.7"
+  },
+  "prettier": {
+    "trailingComma": "none"
   },
   "packageManager": "npm@10.9.0+sha512.65a9c38a8172948f617a53619762cd77e12b9950fe1f9239debcb8d62c652f2081824b986fee7c0af6c0a7df615becebe4bf56e17ec27214a87aa29d9e038b4b"
 }
