--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "pnpm -r lint",
     "test": "pnpm -r test",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "version": "pnpm run build && changeset version && pnpm install"
   },
   "devDependencies": {
     "@changesets/cli": "2.29.4",
