--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,9 +16,11 @@ jobs:
   ci:
     name: CI
     uses: ./.github/workflows/ci.yaml
+
   release:
     name: Release
     runs-on: ubuntu-latest
+    needs: [ci]
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
