Update repository directory in package.json

--- a/packages/jmap-jam/package.json
+++ b/packages/jmap-jam/package.json
@@ -17,7 +17,8 @@
   "description": "A JMAP client library for Node.js and the browser.",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/htunnicliff/jmap-jam.git"
+    "url": "git+https://github.com/htunnicliff/jmap-jam.git",
+    "directory": "packages/jmap-jam"
   },
   "author": {
     "name": "Hunter Tunnicliff",
