--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -43,7 +43,7 @@ jobs:
         uses: changesets/action@v1
         with:
           version: pnpm run version
-          publish: pnpm build && pnpm exec changeset publish
+          publish: pnpm run publish
           commit: "Release"
           title: "Release"
         env:
