Migrate to tsdown

--- a/packages/jmap-jam/package.json
+++ b/packages/jmap-jam/package.json
@@ -25,8 +25,8 @@
     "url": "https://github.com/htunnicliff"
   },
   "scripts": {
-    "preversion": "tsup",
-    "build": "tsup",
+    "preversion": "tsdown",
+    "build": "tsdown",
     "dev": "vitest dev",
     "test": "vitest run",
     "lint": "eslint ."
@@ -39,7 +39,7 @@
     "@types/node": "22.17.2",
     "eslint": "9.33.0",
     "eslint-config-prettier": "10.1.8",
-    "tsup": "8.5.0",
+    "tsdown": "^0.15.6",
     "typescript": "5.9.2",
     "typescript-eslint": "8.40.0",
     "vitest": "3.2.4"
