--- a/packages/jmap-jam/package.json
+++ b/packages/jmap-jam/package.json
@@ -35,6 +35,7 @@
     "type-fest": "4"
   },
   "devDependencies": {
+    "@arethetypeswrong/core": "0.18.2",
     "@eslint/js": "9.33.0",
     "@types/node": "22.17.2",
     "eslint": "9.33.0",
