Update typescript config

--- a/packages/jmap-jam/tsconfig.json
+++ b/packages/jmap-jam/tsconfig.json
@@ -3,14 +3,12 @@
     "lib": ["ESNext", "DOM"],
     "module": "Node16",
     "target": "ES2018",
-    "allowImportingTsExtensions": true,
     "moduleResolution": "Node16",
+    "rewriteRelativeImportExtensions": true,
     "strict": true,
+    "noEmit": true,
     "skipLibCheck": true,
-    "allowSyntheticDefaultImports": true,
-    "emitDeclarationOnly": true,
     "declaration": true,
-    "outDir": "dist",
     "declarationMap": true,
     "noUnusedLocals": true,
     "types": ["vitest/importMeta"]
