--- a/packages/jmap-jam/package.json
+++ b/packages/jmap-jam/package.json
@@ -27,6 +27,7 @@
   "scripts": {
     "preversion": "tsdown",
     "build": "tsdown",
+    "check:types": "tsc --noEmit",
     "dev": "vitest dev",
     "test": "vitest run"
   },
