--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "publish": "pnpm run build && pnpm publish --recursive --access public"
   },
   "devDependencies": {
-    "@changesets/cli": "2.29.6",
-    "@prettier/plugin-oxc": "0.0.4",
-    "oxlint": "1.22.0",
-    "oxlint-tsgolint": "0.2.0",
-    "prettier": "3.6.2"
+    "@changesets/cli": "~2.29.7",
+    "@prettier/plugin-oxc": "~0.0.4",
+    "@types/node": "~22.18.10",
+    "oxlint": "~1.22.0",
+    "oxlint-tsgolint": "~0.2.0",
+    "prettier": "~3.6.2"
   }
 }
