--- a/packages/jmap-jam/package.json
+++ b/packages/jmap-jam/package.json
@@ -35,10 +35,10 @@
     "type-fest": "4"
   },
   "devDependencies": {
-    "@arethetypeswrong/core": "0.18.2",
-    "@types/node": "22.17.2",
-    "tsdown": "^0.15.6",
-    "typescript": "5.9.2",
-    "vitest": "3.2.4"
+    "@arethetypeswrong/core": "~0.18.2",
+    "@types/node": "~22.18.10",
+    "tsdown": "~0.15.6",
+    "typescript": "~5.9.3",
+    "vitest": "~3.2.4"
   }
 }
