Separate JMAP types into separate package

--- a/packages/jmap-jam/tsconfig.json
+++ b/packages/jmap-jam/tsconfig.json
@@ -11,6 +11,7 @@
     "declaration": true,
     "declarationMap": true,
     "noUnusedLocals": true,
+    "verbatimModuleSyntax": true,
     "types": ["vitest/importMeta"]
   },
   "include": ["src/**/*"]
