--- a/packages/jmap-rfc-types/package.json
+++ b/packages/jmap-rfc-types/package.json
@@ -1,43 +1,39 @@
 {
-  "name": "jmap-jam",
-  "version": "0.11.0",
+  "name": "jmap-rfc-types",
+  "version": "0.0.0",
   "type": "module",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "exports": "./dist/index.js",
+  "exports": {
+    ".": "./lib/index.ts",
+    "./jmap-mail": "./lib/jmap-mail.ts",
+    "./jmap": "./lib/jmap.ts"
+  },
   "sideEffects": false,
   "files": [
-    "dist",
-    "src",
+    "lib",
     "package.json",
     "LICENSE.txt",
     "README.md"
   ],
   "license": "MIT",
-  "description": "A JMAP client library for Node.js and the browser.",
+  "description": "TypeScript types for JMAP RFCs",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/htunnicliff/jmap-jam.git",
-    "directory": "packages/jmap-jam"
+    "directory": "packages/jmap-rfc-types"
   },
   "author": {
     "name": "Hunter Tunnicliff",
     "url": "https://github.com/htunnicliff"
   },
   "scripts": {
-    "preversion": "tsdown",
-    "build": "tsdown",
     "check:types": "tsc --noEmit",
     "dev": "vitest dev",
     "test": "vitest run"
   },
   "dependencies": {
-    "jmap-rfc-types": "workspace:*",
     "type-fest": "4"
   },
   "devDependencies": {
-    "@arethetypeswrong/core": "~0.18.2",
-    "tsdown": "~0.15.6",
     "typescript": "~5.9.3",
     "vitest": "~3.2.4"
   }
