--- a/packages/jmap-rfc-types/tsconfig.json
+++ b/packages/jmap-rfc-types/tsconfig.json
@@ -8,7 +8,8 @@
     "rewriteRelativeImportExtensions": true,
     "noEmit": true,
     "skipLibCheck": true,
-    "noUnusedLocals": true
+    "noUnusedLocals": true,
+    "verbatimModuleSyntax": true
   },
   "include": ["lib/**/*"]
 }
