--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -12,7 +12,7 @@
     // No max lines limit
     "max-lines": "allow",
     // Use `type` instead of `interface`
-    "typescript/consistent-type-definitions": ["error", "type"],
+    "typescript/consistent-type-definitions": ["error", "interface"],
     // No limit on dependency count
     "import/max-dependencies": "allow",
     // TOOD: Fix these gradually
