--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "search.exclude": {
     "**/node_modules": true,
     "**/pnpm*.yaml": true
-  }
+  },
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
