--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cspell": "9.3.2",
     "oxlint": "1.29.0",
     "oxlint-tsgolint": "0.7.3",
-    "prettier": "3.6.2"
+    "prettier": "3.6.2",
+    "typescript": "5.9.3"
   }
 }
