--- a/packages/jmap-rfc-types/package.json
+++ b/packages/jmap-rfc-types/package.json
@@ -2,7 +2,8 @@
   "name": "jmap-rfc-types",
   "version": "0.1.1",
   "type": "module",
-  "exports": "./lib/index.ts",
+  "exports": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "sideEffects": false,
   "license": "MIT",
   "description": "TypeScript types for JMAP RFCs",
@@ -16,14 +17,19 @@
     "url": "https://github.com/htunnicliff"
   },
   "scripts": {
+    "preversion": "tsdown",
+    "build": "tsdown",
     "check:types": "tsc --noEmit",
     "dev": "vitest dev",
     "test": "vitest run"
   },
   "dependencies": {
+    "free-types": "0.12.0",
     "type-fest": "5"
   },
   "devDependencies": {
+    "@arethetypeswrong/core": "0.18.2",
+    "tsdown": "0.16.4",
     "typescript": "5.9.3",
     "vitest": "4.0.9"
   }
