Add cspell for project spell-checking

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,6 +33,9 @@ jobs:
       - name: Lint
         run: pnpm lint
 
+      - name: Check spelling
+        run: pnpm spelling:check
+
       - name: Format
         run: pnpm format:check
 
