Check types as build for rfc types

--- a/packages/jmap-rfc-types/package.json
+++ b/packages/jmap-rfc-types/package.json
@@ -21,6 +21,7 @@
   },
   "scripts": {
     "check:types": "tsc --noEmit",
+    "build": "pnpm check:types",
     "dev": "vitest dev",
     "test": "vitest run"
   },
