Group all non-major

--- a/renovate.json
+++ b/renovate.json
@@ -9,6 +9,7 @@
     ":automergeRequireAllStatusChecks",
     ":maintainLockFilesMonthly",
     ":separateMajorReleases",
-    "schedule:automergeEarlyMondays"
+    "schedule:automergeEarlyMondays",
+    "group:allNonMajor"
   ]
 }
