Added support for RFC 9610

--- a/packages/jmap-rfc-types/package.json
+++ b/packages/jmap-rfc-types/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "exports": {
     ".": "./lib/index.ts",
+    "./jmap-contacts": "./lib/jmap-contacts.ts",
     "./jmap-mail": "./lib/jmap-mail.ts",
     "./jmap": "./lib/jmap.ts"
   },
